# haskellbook

1/: exercises.txt
11/: capitalizewords.hs  maptree.hs  subseq.hs  vigenere.hs
12/: maybelib.hs  stringprocessing.hs
14/addition/: LICENSE  addition.cabal
14/addition/src/: Addition.hs
15/: compmonoid.hs  weirdmonoid.hs
16/: fmap-typecheck.txt  functor_quickcheck.hs  list_type.hs  more_functors.hs
2/: test.hs
3/: exercises.txt  print1.hs  print3.hs  scopetest.hs
4/: mood.hs
6/: days.hs  grammartest.hs  papurocks.hs
7/: arith4.hs  exercises.hs
8/: exercises.hs
9/: exercises.hs
hangman/: LICENSE  hangman.cabal
hangman/src/: Main.hs
